--- a/projet_4/hardhat/package.json
+++ b/projet_4/hardhat/package.json
@@ -4,6 +4,7 @@
     "hardhat": "^2.13.0"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.6.1"
+    "@chainlink/contracts": "^0.6.1",
+    "dotenv": "^16.0.3"
   }
 }
